# omni-policy-mcp-tool-drift-via-exchange

./: .gitignore  Cargo.toml  DEMO.md  DEPLOYMENT-NOTES.md  Makefile  README.md  ROADMAP.md
definition/: gcl.yaml  home.md
demo/: config-conform.json  config-slight-drift.json
docs/: managed-omni-gateway-setup.md
playground/: docker-compose.yaml
playground/config/: api.yaml
playground/config/custom-policies/: note.txt
src/: config.rs  debounce.rs  evidence.rs  exchange.rs  jsonrpc.rs  lib.rs  pin.rs  sse.rs
tests/: it_config_loads.rs  it_drift_classification.rs  it_exchange_urls.rs  it_pin_construction.rs  it_tools_list_passthrough.rs
tests/common/: mod.rs
