# Copyright 2026 Salesforce, Inc. All rights reserved.
[package]
name = "omni_policy_mcp_tool_drift_via_exchange"
version = "0.1.0"
rust-version = "1.88.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.anypoint]
group_id = "82a0453b-22e6-430d-bbf4-35b989d043dc"
definition_asset_id = "omni-policy-mcp-tool-drift-via-exchange"
implementation_asset_id = "omni-policy-mcp-tool-drift-via-exchange-impl"

[dependencies]
pdk = { version = "1.9.0", features = ["enable_stop_iteration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "preserve_order"] }
anyhow = "1.0"
thiserror = "1"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
pdk-unit = { version = "1.9.0", features = ["experimental"] }

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
panic = "abort"
